--- a/index.html
+++ b/index.html
@@ -214,13 +214,13 @@
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
         <div class="services__content">
           <div class="icon d-block fas fa-paper-plane"></div>
-          <h3 class="display-3--title mt-1">Medicaid</h3>
+          <h3 class="display-3--title mt-1">StartDev</h3>
           <p class="lh-lg">
-            Older people find it challenging to manage their health needs
-and often have to depend on their younger and more able-bodied
-family members for simple tasks like booking appointments,
-finding doctors and going to the hospital for checkups
-or following routine processes.
+            Domain: Interactive System
+Technologies Used: React JS, Canva
+Entrepreneurs face problems getting support, expert guidance, venture capital, or funding at the beginning stages in the long run.
+StartDev tries to solve these issues virtually by bringing all entrepreneurs, skilled workers, experts, mentors, investors, and companies under one roof.
+
 
           </p>
           <button type="button"  class="rounded-pill btn-rounded border-primary" href="https://docs.google.com/presentation/d/1zoPoC0I79k1IUAmOxayhH_H1AuBcxrZpFwvlBq7h4LA/edit?usp=sharing">Learn more
@@ -244,11 +244,12 @@ or following routine processes.
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
         <div class="services__content">
           <div class="icon d-block fas fa-code"></div>
-          <h3 class="display-3--title mt-1">Wasto</h3>
+          <h3 class="display-3--title mt-1">Alpha Messenger</h3>
           <p class="lh-lg">
-            An idea of proper waste management to provide the service through
-our app. Users will send the information regarding the waste, workers
-will collect them and recycle them.
+           Domain: Database Management
+Technologies Used: HTML, CSS, PHP, SQL
+Using alpha messenger, users can send messages to other users, search for another user to text and see who is online.
+
 
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
@@ -262,11 +263,13 @@ will collect them and recycle them.
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
         <div class="services__content">
           <div class="icon d-block fas fa-cloud-upload-alt"></div>
-          <h3 class="display-3--title mt-1">Khaana Khazana</h3>
+          <h3 class="display-3--title mt-1">UX/UI Designs</h3>
           <p class="lh-lg">
-            The app will serve as a portal for the restaurant to manage all
-its operations. It lets the restaurant's owner keep track of orders
-and all the transactions.
+            Medicaid
+            Wasto
+            Khaana Khazana
+
+
 
           </p>
           <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
